# line-follower-robot

./: Readme.md
docker/: Dockerfile  build_docker.sh  into_docker.sh  run_docker.sh
docker/req/: build.bash  workspace_building.bash
docs/: algorithm.md  gazebo.md  launch_file.md  urdf.md
line_follower_ws/: build.bash  follow_line.py
line_follower_ws/devel/: .catkin  .rosinstall  local_setup.sh  setup.sh
line_follower_ws/devel/share/line_follower/cmake/: line_followerConfig.cmake
line_follower_ws/devel/share/quad_wheel_robot_6/cmake/: quad_wheel_robot_6Config.cmake
line_follower_ws/src/line_follower/: package.xml
line_follower_ws/src/line_follower/launch/: course.launch  gazebo_motor.launch
line_follower_ws/src/line_follower/urdf/: quad_wheel_robot_6.csv  quad_wheel_robot_6.urdf  quad_wheel_robot_6_motor.urdf
line_follower_ws/src/quad_wheel_robot_6/: CMakeLists.txt  package.xml
line_follower_ws/src/quad_wheel_robot_6/config/: diffdrive.yaml  gazebo_ros_control_params.yaml
line_follower_ws/src/quad_wheel_robot_6/launch/: diffdrive.launch  display.launch  gazebo.launch  gazebo_motor.launch  test.launch
line_follower_ws/src/quad_wheel_robot_6/meshes/: base_link.STL  right_rear_wheel.STL  right_steer.STL
line_follower_ws/src/quad_wheel_robot_6/urdf/: quad_wheel_robot_6.urdf  quad_wheel_robot_6_motor.urdf
