<?xml version="1.0"?>
<package>
  <name>line_follower</name>
  <version>0.0.0</version>
  <description>The line follower package</description>
  <maintainer email="jorge.medina@stud.th-deg.de">Jorge Medina</maintainer>
  <license>BSD</license>
  <author email="jorge.medina@stud.th-deg.de">Jorge Medina</author>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <run_depend>rospy</run_depend>
  <run_depend>gazebo_ros</run_depend>
  <export>
    <gazebo_ros gazebo_media_path="${prefix}"/>
  </export>
</package>
